Show Person Detail Done

--- a/DVLD-project.csproj
+++ b/DVLD-project.csproj
@@ -164,5 +164,8 @@
   <ItemGroup>
     <None Include="Resources\Male.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Female.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
