Add Manage Test Type forms

--- a/DVLD-project.csproj
+++ b/DVLD-project.csproj
@@ -104,6 +104,18 @@
     <Compile Include="People\frmShowPersonDetails.Designer.cs">
       <DependentUpon>frmShowPersonDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="TestType\frmAddEditTestTypes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestType\frmAddEditTestTypes.Designer.cs">
+      <DependentUpon>frmAddEditTestTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TestType\frmListTestTypes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestType\frmListTestTypes.Designer.cs">
+      <DependentUpon>frmListTestTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Users\Controls\ctrlUserDetailsCard.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -165,6 +177,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="People\frmShowPersonDetails.resx">
       <DependentUpon>frmShowPersonDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestType\frmAddEditTestTypes.resx">
+      <DependentUpon>frmAddEditTestTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestType\frmListTestTypes.resx">
+      <DependentUpon>frmListTestTypes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Users\Controls\ctrlUserDetailsCard.resx">
       <DependentUpon>ctrlUserDetailsCard.cs</DependentUpon>
