--- a/DVLDAccessLayer/DVLDAccessLayer.csproj
+++ b/DVLDAccessLayer/DVLDAccessLayer.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="clsApplicationTypesData.cs" />
     <Compile Include="clsPersonData.cs" />
+    <Compile Include="clsTestTypesData.cs" />
     <Compile Include="clsUserData.cs" />
     <Compile Include="CountryData.cs" />
     <Compile Include="DVLDAcessLayerSettings.cs" />
