--- a/DVLDBusinessLayer/DVLDBusinessLayer.csproj
+++ b/DVLDBusinessLayer/DVLDBusinessLayer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="clsApplicationTypes.cs" />
     <Compile Include="clsPerson.cs" />
     <Compile Include="clsCountry.cs" />
+    <Compile Include="clsTestTypes.cs" />
     <Compile Include="clsUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
