Manage Local Applications

--- a/DVLD-project.csproj
+++ b/DVLD-project.csproj
@@ -319,5 +319,14 @@
   <ItemGroup>
     <None Include="Resources\Money.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\New.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Renew.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LocalLicense.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
