Added cancel application feature

--- a/DVLD-project.csproj
+++ b/DVLD-project.csproj
@@ -346,5 +346,8 @@
   <ItemGroup>
     <None Include="Resources\LocalLicense.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Cancel.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
