--- a/DVLDBusinessLayer/DVLDBusinessLayer.csproj
+++ b/DVLDBusinessLayer/DVLDBusinessLayer.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="clsApplication.cs" />
     <Compile Include="clsApplicationTypes.cs" />
+    <Compile Include="clsLicense.cs" />
     <Compile Include="clsLicenseClasses.cs" />
     <Compile Include="clsLocalDrivingLicenseApplication.cs" />
     <Compile Include="clsPerson.cs" />
