--- a/DVLDAccessLayer/DVLDAccessLayer.csproj
+++ b/DVLDAccessLayer/DVLDAccessLayer.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="clsApplicationsData.cs" />
     <Compile Include="clsApplicationTypesData.cs" />
+    <Compile Include="clsDriverData.cs" />
     <Compile Include="clsLicenseData.cs" />
     <Compile Include="clsLocalDrivingLicenseApplicationsData.cs" />
     <Compile Include="clsPersonData.cs" />
