--- a/DVLD-project.csproj
+++ b/DVLD-project.csproj
@@ -46,16 +46,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Applications\frmAddEditLDLApplication.cs">
+    <Compile Include="Applications\Controls\ctrlApplicationDetailsCard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Applications\Controls\ctrlApplicationDetailsCard.Designer.cs">
+      <DependentUpon>ctrlApplicationDetailsCard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Applications\Controls\ctrlLDLApplicationDetailsCard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Applications\Controls\ctrlLDLApplicationDetailsCard.Designer.cs">
+      <DependentUpon>ctrlLDLApplicationDetailsCard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Applications\LocalDrivingLicenseApplication\frmAddEditLDLApplication.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Applications\frmAddEditLDLApplication.Designer.cs">
+    <Compile Include="Applications\LocalDrivingLicenseApplication\frmAddEditLDLApplication.Designer.cs">
       <DependentUpon>frmAddEditLDLApplication.cs</DependentUpon>
     </Compile>
-    <Compile Include="Applications\frmListLocalDrivingLicenseApplications.cs">
+    <Compile Include="Applications\LocalDrivingLicenseApplication\frmListLocalDrivingLicenseApplications.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Applications\frmListLocalDrivingLicenseApplications.Designer.cs">
+    <Compile Include="Applications\LocalDrivingLicenseApplication\frmListLocalDrivingLicenseApplications.Designer.cs">
       <DependentUpon>frmListLocalDrivingLicenseApplications.cs</DependentUpon>
     </Compile>
     <Compile Include="Applications\ApplicationType\frmListApplicationType.cs">
@@ -70,10 +82,10 @@
     <Compile Include="Applications\ApplicationType\frmAddEditApplicationTypes.Designer.cs">
       <DependentUpon>frmAddEditApplicationTypes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Drivers\Controller\ctrlDriverDetailsCard.cs">
+    <Compile Include="Drivers\Controls\ctrlDriverDetailsCard.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Drivers\Controller\ctrlDriverDetailsCard.Designer.cs">
+    <Compile Include="Drivers\Controls\ctrlDriverDetailsCard.Designer.cs">
       <DependentUpon>ctrlDriverDetailsCard.cs</DependentUpon>
     </Compile>
     <Compile Include="Drivers\frmListDrivers.cs">
@@ -170,10 +182,16 @@
     <Compile Include="Users\frmShowUserDetails.Designer.cs">
       <DependentUpon>frmShowUserDetails.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Applications\frmAddEditLDLApplication.resx">
+    <EmbeddedResource Include="Applications\Controls\ctrlApplicationDetailsCard.resx">
+      <DependentUpon>ctrlApplicationDetailsCard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Applications\Controls\ctrlLDLApplicationDetailsCard.resx">
+      <DependentUpon>ctrlLDLApplicationDetailsCard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Applications\LocalDrivingLicenseApplication\frmAddEditLDLApplication.resx">
       <DependentUpon>frmAddEditLDLApplication.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Applications\frmListLocalDrivingLicenseApplications.resx">
+    <EmbeddedResource Include="Applications\LocalDrivingLicenseApplication\frmListLocalDrivingLicenseApplications.resx">
       <DependentUpon>frmListLocalDrivingLicenseApplications.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Applications\ApplicationType\frmListApplicationType.resx">
@@ -182,7 +200,7 @@
     <EmbeddedResource Include="Applications\ApplicationType\frmAddEditApplicationTypes.resx">
       <DependentUpon>frmAddEditApplicationTypes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Drivers\Controller\ctrlDriverDetailsCard.resx">
+    <EmbeddedResource Include="Drivers\Controls\ctrlDriverDetailsCard.resx">
       <DependentUpon>ctrlDriverDetailsCard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Drivers\frmListDrivers.resx">
@@ -384,6 +402,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Notes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\OpenedEye.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Street.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
